[gd_scene load_steps=23 format=3 uid="uid://b4ackxvfw2y11"]

[ext_resource type="FontFile" uid="uid://c4ipibpwabuor" path="res://Assets/Fonts/Xolonium-Regular.ttf" id="1_jrovp"]
[ext_resource type="Script" path="res://GUI/HUD/hud.gd" id="1_l8by6"]
[ext_resource type="Texture2D" uid="uid://hwycs3m13rn2" path="res://Assets/Images/buttons/resume.png" id="3_kiire"]
[ext_resource type="Texture2D" uid="uid://qjyiisrnvbgg" path="res://Assets/Images/buttons/pause.png" id="3_x6o56"]

[sub_resource type="LabelSettings" id="LabelSettings_8sbkk"]
font = ExtResource("1_jrovp")

[sub_resource type="LabelSettings" id="LabelSettings_223py"]
font = ExtResource("1_jrovp")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_rq1d6"]
font = ExtResource("1_jrovp")

[sub_resource type="LabelSettings" id="LabelSettings_nlbra"]
font = ExtResource("1_jrovp")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_ds8vg"]
font = ExtResource("1_jrovp")

[sub_resource type="LabelSettings" id="LabelSettings_sbdfm"]
font = ExtResource("1_jrovp")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_nrd11"]
font = ExtResource("1_jrovp")
font_size = 64

[sub_resource type="Animation" id="Animation_708op"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/VBoxContainer/MessageLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/VBoxContainer/MessageLabel:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_k6gf0"]
resource_name = "init"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/VBoxContainer/MessageLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/VBoxContainer/MessageLabel:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_uca6p"]
resource_name = "show_message"
length = 0.75
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/VBoxContainer/MessageLabel:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/VBoxContainer/MessageLabel:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(2, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g3pj3"]
_data = {
"RESET": SubResource("Animation_708op"),
"init": SubResource("Animation_k6gf0"),
"show_message": SubResource("Animation_uca6p")
}

[sub_resource type="Animation" id="Animation_v5lik"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/VBoxContainer/TopHBoxContainer/BonusVBoxContainer/BonusLabel:label_settings:font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_mcou3"]
resource_name = "bonus_down"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/VBoxContainer/TopHBoxContainer/BonusVBoxContainer/BonusLabel:label_settings:font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_wamif"]
resource_name = "bonus_up"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/VBoxContainer/TopHBoxContainer/BonusVBoxContainer/BonusLabel:label_settings:font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 1, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_berp3"]
_data = {
"RESET": SubResource("Animation_v5lik"),
"bonus_down": SubResource("Animation_mcou3"),
"bonus_up": SubResource("Animation_wamif")
}

[sub_resource type="Animation" id="Animation_swurq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/VBoxContainer/TopHBoxContainer/ScoreVBoxContainer/ScoreLabel:label_settings:font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_yht8d"]
resource_name = "score_up"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/VBoxContainer/TopHBoxContainer/ScoreVBoxContainer/ScoreLabel:label_settings:font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.14, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 1, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vjicl"]
_data = {
"RESET": SubResource("Animation_swurq"),
"score_up": SubResource("Animation_yht8d")
}

[node name="HUD" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_l8by6")
pause_texture = ExtResource("3_x6o56")
resume_texture = ExtResource("3_kiire")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="TopHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="BonusVBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TopHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = -1
alignment = 1

[node name="BonusNameLabel" type="Label" parent="MarginContainer/VBoxContainer/TopHBoxContainer/BonusVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Bonus"
label_settings = SubResource("LabelSettings_8sbkk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BonusLabel" type="Label" parent="MarginContainer/VBoxContainer/TopHBoxContainer/BonusVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "999"
label_settings = SubResource("LabelSettings_223py")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreVBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TopHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = -1
alignment = 1

[node name="ScoreNameLabel" type="Label" parent="MarginContainer/VBoxContainer/TopHBoxContainer/ScoreVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Score"
label_settings = SubResource("LabelSettings_rq1d6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer/TopHBoxContainer/ScoreVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "999"
label_settings = SubResource("LabelSettings_nlbra")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelVBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TopHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = -2
alignment = 1

[node name="LevelNameLabel" type="Label" parent="MarginContainer/VBoxContainer/TopHBoxContainer/LevelVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Level"
label_settings = SubResource("LabelSettings_ds8vg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer/TopHBoxContainer/LevelVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "999"
label_settings = SubResource("LabelSettings_sbdfm")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3
text = "Message"
label_settings = SubResource("LabelSettings_nrd11")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="PauseResumeButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
focus_mode = 0
texture_normal = ExtResource("3_x6o56")

[node name="MessageAnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_g3pj3")
}
autoplay = "init"

[node name="BonusAnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_berp3")
}

[node name="ScoreAnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_vjicl")
}

[connection signal="pressed" from="MarginContainer/VBoxContainer/PauseResumeButton" to="." method="_on_pause_resume_button_pressed"]
